--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,3 +5,6 @@
     <li><%= link_to p.title, post_path(p) %></li>
   <% end %>
 </ul>
+<% @posts.each do |p| %>
+  <li><%= link_to p.title, post_path(p) %></li>
+<% end %>
